新增文件夹支持下载为zip
